<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent" android:layout_height="fill_parent"
	android:fillViewport="true" android:isScrollContainer="true">
	<LinearLayout android:layout_width="fill_parent"
		android:layout_height="fill_parent" android:orientation="vertical">

		<RelativeLayout android:layout_weight="1"
			android:layout_width="fill_parent" android:layout_height="wrap_content"
			android:padding="20dip">
			<TextView android:text="@string/upLogin"
				android:layout_width="fill_parent" android:layout_height="wrap_content"
				android:id="@+id/uptext" android:gravity="center"
				android:paddingBottom="15dip" android:textSize="20dip" />
			<EditText android:layout_height="wrap_content"
				android:layout_width="fill_parent" android:id="@+id/username2"
				android:hint="@string/User" android:layout_below="@id/uptext" 
				android:singleLine="true"/>
			<EditText android:layout_height="wrap_content"
				android:layout_width="fill_parent" android:id="@+id/password2"
				android:hint="@string/Pass" android:layout_below="@id/username2"
				android:inputType="textPassword" android:singleLine="true" />
		</RelativeLayout>

		<LinearLayout android:orientation="horizontal"
			android:layout_width="fill_parent" android:layout_height="wrap_content">
			<Button android:id="@+id/cancel4" android:layout_width="fill_parent"
				android:layout_height="wrap_content" android:text="@string/Cancel"
				android:layout_weight="1" />
				<Button android:id="@+id/back4" android:layout_width="fill_parent"
			android:layout_height="wrap_content" android:text="Back"
			android:layout_weight="1" />
			<Button android:id="@+id/next4" android:layout_width="fill_parent"
				android:layout_height="wrap_content" android:layout_weight="1"
				android:text="@string/finish" />
		</LinearLayout>
	</LinearLayout>
</ScrollView>